Fixed issue with padding of feature highlight icons on mobile

--- a/static/shared/css/adaptive.css
+++ b/static/shared/css/adaptive.css
@@ -165,7 +165,7 @@
 
     /* Feature selector and highlights stuff */
     .highlights li {
-        padding: 7% 7% 5% 7%;
+        padding: 7% 1vw;
     }
     .highlights li:hover {
         background-color: rgb(245,244,239);
